src/index.css
:root {
  --ultra-light-blue: #e3f4ff; /* hsl(204 100% 94.5%) */
  --extra-light-blue: #cef; /* hsl(200 100% 90%) */
  --light-blue: #adf; /* hsl(204 100% 83.3%) */
  --lighter-blue: #8bd; /* hsl(204 55.6% 70%) */
  --medium-blue: #6ac; /* hsl(200 50% 60%) */
  --darker-blue: #48b; /* hsl(206 47% 50%) */
  --dark-blue: #37a; /* hsl(206 53.9% 43.3%) */
  --extra-dark-blue: #169; /* hsl(203 80% 33.3%) */
  --ultra-dark-blue: #012; /* hsl(210 100% 6.7%) */

  --light-to-white-blue: linear-gradient(to bottom, var(--light-blue) 0%, white 100%);
  --light-to-medium-blue: linear-gradient(to bottom, var(--light-blue) 0%, var(--medium-blue) 100%);
  --dark-to-light-blue: linear-gradient(to bottom, var(--dark-blue) 0%, var(--light-blue) 100%);
  --medium-to-dark-blue: linear-gradient(to bottom, var(--medium-blue) 0%, var(--dark-blue) 100%);

  --state-green: hsl(100,57%,37%); /* #4C9429 */
  --state-red: hsl(345,60%,40%); /* #A32947 */

  --pale-violet: #c6a; /* hsl(320, 50%, 60%); */
  --bright-violet: #e4b; /* hsl(318, 83%, 60%); */

  --fire-yellow: hsl(48, 100%, 62%);
  --fire-yellorange: hsl(40, 100%, 56%);
  --fire-orange: hsl(32, 100%, 50%);
  --fire-red: hsl(16, 100%, 44%);
  --fire-blue: hsl(224, 80%, 38%);

  --light-pristine: hsl(60 6% 75%);
  --medium-pristine: hsl(40 8% 56%);
  --dark-pristine: hsl(20 6% 37%);
  --light-touched: hsl(60 12% 87%);
  --medium-touched: hsl(40 16% 68%);
  --dark-touched: hsl(20 12% 50%);

  --screen-gutter: 1em;
}

@media only screen and (orientation: portrait) {
  :root {
    --app-width: 24em;
  }
}

@media only screen and (orientation: landscape) {
  :root {
    --app-width: 27em;
  }
}

/* MAIN ELEMENTS */

html {
  scroll-behavior: smooth;
}

body,
section.screen {
  font-size: 15px;
}

body {
  background: var(--dark-to-light-blue) fixed;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* SEMANTIC ELEMENTS */

body,
input,
select,
textarea,
button {
  font-family: "Helvetica Neue", HelveticaNeue, Helvetica, "Arial Unicode MS",
    "Arial Unicode", ArialUnicode, Arial, sans-serif;
  font-kerning: normal;
  letter-spacing: 0px;
  text-align: center;
}

input,
select,
textarea,
button {
  font-size: inherit;
  line-height: inherit;
  font-weight: 500;
}

.buttons button {
  margin: 0.5em;
  line-height: 0;
  padding: 1.1em 1em;
  border: 0 none;
  border-radius: 0.5em;
  box-shadow: -0.02em -0.05em 0.1em black, 0.05em 0.02em 0.5em white;
}

button.confirm {
  background: var(--medium-to-dark-blue);
  color: white;
  text-shadow: -0.02em -0.05em black, 0.008em 0.02em var(--light-blue);
}

button.cancel {
  background: var(--light-to-medium-blue);
  color: black;
  text-shadow: -0.02em -0.05em white, 0.008em 0.02em var(--light-blue);
}

button.delete {
  color: white;
  background: var(--state-red);

  &:hover {
    background: linear-gradient(var(--fire-red), var(--state-red));
  }
}

button.replay {
  color: white;
  background: var(--dark-blue);

  &:hover {
    background: linear-gradient(var(--medium-blue), var(--dark-blue));
  }
}

h1, h2, .h2, h3, .h3, h4, h5, .h5, h6, dl, p, ol, ul {
  margin-block: 1ex;
  line-height: 133%;
}

h1 {font-size: 2em}
h2, .h2 {font-size: 1.5em}
h3, .h3 {font-size: 1.17em}
h4 {font-size: 1em}
h5, .h5 {font-size: .83em}
h6 {font-size: .67em; font-weight: normal}

hr {
  border: none;
  border-bottom: 1px solid currentcolor;
  margin-block: 1em;
  width: 75%;
}

/* SPECIAL FONT */

#playground,
nav,
.adorn {
  font-family: "dejavu_sansbook", sans-serif;
  font-kerning: normal;
  font-size: inherit;
  line-height: 140%;
}

/* PORTAL ELEMENTS */

#root {
  position: relative;
  z-index: 0;
}

#root:has(#game .game-lost) {
  /* prevent scrollbars when mines explode */
  overflow: hidden;
}

button {
  font-family: inherit;
  cursor: pointer;
  -webkit-user-select: none;
  user-select: none;
}

svg[aria-hidden] {
  position: absolute;
  width: 0;
  height: 0;
  overflow: hidden;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

